# chat-bot

./: .env.example  .gitignore  README.md  REFACTORING_PLAN.md  app.py  constant.py  pyproject.toml  requirements.txt  web_server.py  ws_server.py
.app_cache/: cache.db
adapters/asr/: asr_factory.py  funasr_sensevoice_adapter.py
adapters/handlers/: handler_factory.py  websocket_handler.py
adapters/llm/: __init__.py  langchain_agent_adapter.py  langchain_llm_adapter.py  llm_factory.py
adapters/protocols/: protocol_factory.py  websocket_protocol_adapter.py
adapters/tts/: __init__.py  edge_tts_adapter.py  tts_factory.py
adapters/vad/: __init__.py  silero_vad_adapter.py  vad_factory.py
application/audio/: __init__.py  audio_processing_orchestrator.py  audio_stream_processor.py
applications/: client.py  web_client.html
backend/: main.py
backend/configs/: config.yaml  config.yaml.example  test_config.yaml
backend/core/: adapter_loader.py  adapter_registry.py  app_context.py  config_models.py  constants.py
backend/scripts/: build_desktop.sh  download_models.py  download_silero_vad.py  run_desktop.sh
backend/tests/: conftest.py  run_all_adapter_tests.sh  test_asr_direct.py  test_asr_with_torchaudio.py  test_core_modules.py  test_error_handling.py  test_full_adapters.py  test_langchain_fix.py  test_langchain_llm_adapter.py  test_protocol_adapter.py  test_real_modules_integration.py  test_real_server.py  test_real_system.py  test_single_asr.py  test_single_tts.py  test_single_vad.py
backend/utils/: __init__.py  audio_converter.py  config_loader.py  config_manager.py  dependencies.py  error_handling.py  logging_setup.py  module_initialization_utils.py  paths.py
configs/: config.yaml  config.yaml.example  llm.conf.example  test_config.yaml
core/: adapter_registry.py  app_context.py  chat_engine.py  config_models.py  conversation.py  conversation_handler.py  conversation_manager.py  event_manager.py  interrupt_manager.py  module_manager.py  session_context.py  session_manager.py
core/audio/: __init__.py  audio_buffer_manager.py  audio_constants.py  speech_segment_detector.py
core_framework/: chat_engine.py  event_manager.py  exceptions.py  module_manager.py  session_manager.py
data_models/: __init__.py  audio_data.py  audio_segment.py  stream_event.py  text_data.py
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md
frontend/: package-lock.json
handlers/: __init__.py  audio_input.py  text_input.py
modules/: __init__.py  base_asr.py  base_handler.py  base_llm.py  base_module.py  base_protocol.py  base_tts.py  base_vad.py
scripts/: build_desktop.sh  download_models.py  download_silero_vad.py  run_desktop.sh
service/: AudioConsumer.py
services/: config_loader.py
src/: cli.py
tests/: conftest.py  integration_test_llm.py  test_asr_direct.py  test_asr_simple.py  test_asr_with_torchaudio.py  test_core_modules.py  test_error_handling.py  test_full_adapters.py  test_langchain_fix.py  test_langchain_llm_adapter.py  test_protocol_adapter.py  test_real_modules_integration.py  test_real_vad_loading.py  test_single_asr.py  test_single_tts.py  test_single_vad.py  test_tts_vad_integration.py  test_vad_segmentation.py
utils/: audio_converter.py  config_loader.py  context_utils.py  func.py  logging_setup.py  module_initialization_utils.py
(+158 files in other folders)
